# minivi-scaffold

./: README.md  lorem.txt  minivi.cabal  test.txt
app/: Main.hs
c/: terminal.c
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: minivi-0.1.0.0-inplace.conf  package.cache
dist-newstyle/tmp/environment.-79819/: .ghc.environment.aarch64-darwin-9.4.8
dist-newstyle/tmp/environment.-92619/: .ghc.environment.aarch64-darwin-9.4.8
src/: App.hs  Update.hs  Util.hs  View.hs
test/: Test.hs
